--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="C:\Users\Student\Desktop\h1.jpg" alt="h1">
+                    <img src="h1.jpg" alt="h1">
                   </div>
                   <div class="carousel-item">
                     <img src="C:\Users\Student\Desktop\h2.jpg" alt="h2"       >                                ">
