--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <img src="h1.jpg" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="C:\Users\Student\Desktop\h2.jpg" alt="h2"       >                                ">
+                    <img src="h2.jpg" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="C:\Users\Student\Desktop\raj.jpg"> alt="raj">
+                    <img src="raj.jpg" alt="raj">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
